SplCompiler/tests/errors/redeclaration.spl
Redeclaration:
    DECLARATIONS
        a, b, c, a OF TYPE INTEGER;
        b OF TYPE CHARACTER;
        c OF TYPE REAL;
    CODE
    NEWLINE
ENDP Redeclaration.
